--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Angular build & cache
+.angular/
+dist/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+
+# Misc build logs
+build_error.txt
+build_log.txt
+build_output.txt
+build_output_final.txt
+build_output_final_v2.txt
+blank.txt
